// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Login Component should submit username 1`] = `
<div
  className="login"
>
  <form
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      Enter
    </button>
  </form>
</div>
`;

exports[`Login Component should submit username 2`] = `
<div
  className="login"
>
  <form
    onSubmit={[Function]}
  >
    <input
      onChange={[Function]}
      type="text"
      value="max"
    />
    <button
      type="submit"
    >
      Enter
    </button>
  </form>
</div>
`;
